# focusd

./: .gitignore  Cargo.toml  README.md  focus.toml  hosts  hosts2
src/: client.rs  common.rs  config.rs  hosts.rs  main.rs  messages.rs  server.rs  time.rs
