[package]
name = "focusd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap      = "3.0.0-beta.4"
colored   = "2.0.0"
rmp-serde = "0.15.5"
nix       = "0.23.0"
toml      = "0.5.8"
regex     = "1.5.4"

[dependencies.serde]
version="1.0.130"
features=["derive"]

